chore: adds more test cases